<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_login">Create Login</string>
    <string name="login">Log In</string>
    <string name="instructions_button">Get Started</string>
    <string name="instructions">Instructions</string>
    <string name="logo_description">Shoe store logo</string>
    <string name="shoe_list_btn">Go to Shoe List</string>
    <string name="shoe_details_header">New Shoes</string>
    <string name="shoe_name_label">Name</string>
    <string name="company_label">Company</string>
    <string name="size_label">Size</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="description_label">Description</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_body">Welcome to the shoe store.
        \n\nThis shoe store has been developed as a project of \" Egypt Future Work Is Digital\" program.</string>
    <string name="instructions_body">The shoe store provides you with a list of various shoes.
    \n\nYou can just display this list to know the newest available collection.
    \n\nYou have the option to add a new shoe with its full details by clicking add button in the next page.</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="log_out">Log Out</string>
    <string name="login_noun">Login</string>
</resources>