<?xml version="1.0" encoding="utf-8"?>
<!--    added "layout" tag to apply data binding-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.InstructionFragment">

    <!--    Used because it is a simple layout
    where the views can be arranged vertically-->
    <LinearLayout
        style="@style/LayoutStyle"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/instructions_header"
            android:text="@string/instructions"
            style="@style/Header">

        </TextView>

        <TextView
            android:id="@+id/instructions_body"
            android:text="@string/instructions_body"
            style="@style/InstructionsBody">

        </TextView>

        <Button
            android:id="@+id/instructions_btn"
            style="@style/ButtonStyle"
            android:text="@string/shoe_list_btn">

        </Button>

    </LinearLayout>

</layout>