<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.WelcomeScreen">

    <!--    Used because it is a simple layout
        where the views can be arranged vertically-->
    <LinearLayout
        style="@style/LayoutStyle"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:id="@+id/welcome_header"
            android:text="@string/welcome"
            style="@style/Header">

        </TextView>

        <ImageView
            android:id="@+id/shoeIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/shoe_skate_logo">

        </ImageView>

        <TextView
            android:id="@+id/welcome_body"
            style="@style/WelcomeBody">

        </TextView>

        <Button
            android:id="@+id/instructions_btn"
            style="@style/ButtonStyle"
            android:text="@string/instructions_button">
        </Button>

    </LinearLayout>
</layout>