<?xml version="1.0" encoding="utf-8"?>

<!--    added "layout" tag to apply data binding-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ShoeDetailFragment">

    <data>
        <import type="com.hfad.shoestore.converter.IntConverter"></import>
        <variable
            name="shoe"
            type="com.hfad.shoestore.classes.Shoe" />
    </data>

<!--    Used for complex layouts which contains many views-->
<!--    Using constraint layouts will avoid using nested view groups-->
    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LayoutStyle">


        <TextView
            android:id="@+id/shoe_details_header"
            style="@style/Header"
            android:text="@string/shoe_details_header"
            app:layout_constraintBottom_toTopOf="@id/barrier8"
            app:layout_constraintEnd_toEndOf="@id/barrier7"
            app:layout_constraintStart_toStartOf="@id/barrier6"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/shoe_name_label"
            style="@style/LabelStyle"
            android:text="@string/shoe_name_label"
            app:barrierDirection="top"
            app:layout_constraintBaseline_toBaselineOf="@id/editName"
            app:layout_constraintBottom_toTopOf="@id/company_label"
            app:layout_constraintEnd_toStartOf="@id/barrier10"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="@id/barrier6"
            app:layout_constraintTop_toBottomOf="@id/barrier8" />

        <EditText
            android:id="@+id/editName"
            style="@style/EditTextStyle"
            android:hint="@string/shoe_name_label"
            android:text="@={shoe.shoeName}"
            app:barrierDirection="top"
            app:layout_constraintBottom_toTopOf="@+id/editCompany"
            app:layout_constraintEnd_toStartOf="@id/barrier7"
            app:layout_constraintStart_toStartOf="@id/barrier10"
            app:layout_constraintTop_toTopOf="@id/barrier8">

        </EditText>

        <TextView
            android:id="@+id/company_label"
            style="@style/LabelStyle"
            android:text="@string/company_label"
            app:layout_constraintBaseline_toBaselineOf="@id/editCompany"
            app:layout_constraintBottom_toTopOf="@id/size_label"
            app:layout_constraintEnd_toStartOf="@id/barrier10"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="@id/barrier6"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_label" />

        <EditText
            android:id="@+id/editCompany"
            style="@style/EditTextStyle"
            android:hint="@string/company_label"
            android:text="@={shoe.shoeCompany}"
            app:barrierDirection="end"
            app:layout_constraintBottom_toTopOf="@+id/editSize"
            app:layout_constraintEnd_toEndOf="@id/barrier7"
            app:layout_constraintStart_toStartOf="@id/barrier10"
            app:layout_constraintTop_toBottomOf="@id/editName">

        </EditText>

        <TextView
            android:id="@+id/size_label"
            style="@style/LabelStyle"
            android:text="@string/size_label"
            app:layout_constraintBaseline_toBaselineOf="@id/editSize"
            app:layout_constraintBottom_toTopOf="@id/description_label"
            app:layout_constraintEnd_toStartOf="@id/barrier10"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="@id/barrier6"
            app:layout_constraintTop_toBottomOf="@id/company_label" />

        <EditText
            android:id="@+id/editSize"
            style="@style/EditTextStyle"
            android:hint="@string/size_label"
            android:inputType="number"
            android:text="@={IntConverter.intToString(shoe.shoeSize)}"
            app:barrierDirection="end"
            app:layout_constraintBottom_toTopOf="@+id/editDescription"
            app:layout_constraintEnd_toEndOf="@id/barrier7"
            app:layout_constraintStart_toStartOf="@id/barrier10"
            app:layout_constraintTop_toBottomOf="@id/editCompany">

        </EditText>

        <TextView
            android:id="@+id/description_label"
            style="@style/LabelStyle"
            android:text="@string/description_label"
            app:barrierDirection="bottom"
            app:layout_constraintBaseline_toBaselineOf="@id/editDescription"
            app:layout_constraintBottom_toBottomOf="@id/barrier9"
            app:layout_constraintEnd_toStartOf="@id/barrier10"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="@id/barrier6"
            app:layout_constraintTop_toBottomOf="@id/size_label">

        </TextView>

        <EditText
            android:id="@+id/editDescription"
            style="@style/EditTextStyle"
            android:hint="@string/description_label"
            android:text="@={shoe.shoeDescription}"
            app:barrierDirection="bottom"
            app:layout_constraintBottom_toTopOf="@+id/barrier9"
            app:layout_constraintEnd_toEndOf="@id/barrier7"
            app:layout_constraintStart_toStartOf="@id/barrier10"
            app:layout_constraintTop_toBottomOf="@id/editSize">

        </EditText>

        <Button
            android:id="@+id/save_btn"
            style="@style/ButtonStyle"
            android:text="@string/save_button"
            app:layout_constraintBottom_toTopOf="@id/cancel_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier9"
            app:layout_constraintVertical_chainStyle="packed">

        </Button>

        <Button
            android:id="@+id/cancel_btn"
            style="@style/ButtonStyle"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save_btn">

        </Button>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="company_label,shoe_name_label,size_label,description_label,cancel_btn,save_btn"
            tools:layout_editor_absoluteX="403dp"
            tools:layout_editor_absoluteY="8dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="editName,editCompany,editSize,editDescription,cancel_btn,save_btn"
            tools:layout_editor_absoluteX="403dp"
            tools:layout_editor_absoluteY="8dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="editName,shoe_name_label"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="723dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="description_label,editDescription"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="723dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="editName,editCompany,editSize,editDescription"
            tools:layout_editor_absoluteX="403dp"
            tools:layout_editor_absoluteY="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>