<?xml version="1.0" encoding="utf-8"?>
<!--    added "layout" tag to apply data binding-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoginFragment">

    <!--    Used for complex layouts which contains many views-->
    <!--    Used to avoid nested view groups-->
    <androidx.constraintlayout.widget.ConstraintLayout style="@style/LayoutStyle">

        <ImageView
            android:id="@+id/shoeIcon"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_margin="@dimen/margin_body"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_shop"
            app:layout_constraintBottom_toTopOf="@id/barrier4"
            app:layout_constraintEnd_toEndOf="@id/barrier2"
            app:layout_constraintStart_toStartOf="@id/barrier3"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/emailLabel"
            style="@style/LabelStyle"
            android:text="@string/email"
            app:layout_constraintBaseline_toBaselineOf="@id/editEmail"
            app:layout_constraintBottom_toTopOf="@id/passLabel"
            app:layout_constraintEnd_toStartOf="@id/barrier11"
            app:layout_constraintStart_toStartOf="@id/barrier3"
            app:layout_constraintTop_toTopOf="@id/barrier4" />


        <EditText
            android:id="@+id/editEmail"
            style="@style/EditTextStyle"
            android:drawableStart="@drawable/email_icon"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/editPassword"
            app:layout_constraintEnd_toEndOf="@id/barrier2"
            app:layout_constraintStart_toEndOf="@id/barrier11"
            app:layout_constraintTop_toBottomOf="@id/barrier4"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="packed">

        </EditText>

        <EditText
            android:id="@+id/editPassword"
            style="@style/EditTextStyle"
            android:drawableStart="@drawable/password_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/barrier5"
            app:layout_constraintEnd_toEndOf="@id/barrier2"
            app:layout_constraintStart_toEndOf="@id/barrier11"
            app:layout_constraintTop_toBottomOf="@id/editEmail">

        </EditText>

        <TextView
            android:id="@+id/passLabel"
            style="@style/LabelStyle"
            android:text="@string/password"
            app:layout_constraintBaseline_toBaselineOf="@id/editPassword"
            app:layout_constraintBottom_toTopOf="@id/barrier5"
            app:layout_constraintEnd_toStartOf="@id/barrier11"
            app:layout_constraintStart_toStartOf="@id/barrier3"
            app:layout_constraintTop_toBottomOf="@id/emailLabel">

        </TextView>

        <Button
            android:id="@+id/create_login_btn"
            style="@style/ButtonStyle"
            android:text="@string/create_login"
            app:layout_constraintBottom_toTopOf="@id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier5"
            app:layout_constraintVertical_chainStyle="packed">

        </Button>

        <Button
            android:id="@+id/login_btn"
            style="@style/ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_login_btn">

        </Button>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="login_btn,create_login_btn"
            tools:layout_editor_absoluteX="403dp"
            tools:layout_editor_absoluteY="8dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="emailLabel,passLabel,login_btn,create_login_btn"
            tools:layout_editor_absoluteX="403dp"
            tools:layout_editor_absoluteY="8dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="emailLabel,editEmail"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="723dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="passLabel,editPassword"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="723dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="editPassword,editEmail"
            tools:layout_editor_absoluteX="403dp"
            tools:layout_editor_absoluteY="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>